<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MailLite</string>

    <string name="login_title">Entrar</string>
    <string name="login_hint_email">E-mail</string>
    <string name="login_hint_password">Senha</string>
    <string name="login_button">Entrar</string>
    <string name="login_register_link">Não tem conta? Cadastre-se</string>

    <string name="register_title">Criar conta</string>
    <string name="register_hint_name">Nome</string>
    <string name="register_hint_email">E-mail</string>
    <string name="register_hint_password">Senha</string>
    <string name="register_button">Cadastrar</string>
    <string name="register_login_link">Já tem conta? Entrar</string>
    <string name="register_success_message">Cadastro realizado! Faça login.</string>

    <string name="inbox_empty_title">Nenhuma mensagem ainda</string>
    <string name="inbox_empty_subtitle">Quando alguém te enviar uma mensagem, ela aparece aqui.</string>
    <string name="inbox_error_generic">Não foi possível carregar suas mensagens.</string>
    <string name="inbox_retry_button">Tentar novamente</string>
    <string name="inbox_fab_compose_description">Nova mensagem</string>
    <string name="inbox_delete_undo_message">Mensagem \"%1$s\" excluída</string>
    <string name="inbox_delete_undo_action">Desfazer</string>

    <string name="message_detail_delete_button">Excluir mensagem</string>
    <string name="message_detail_deleted_message">Mensagem excluída</string>

    <string name="compose_hint_recipient">Destinatário</string>
    <string name="compose_hint_subject">Assunto</string>
    <string name="compose_hint_body">Mensagem</string>
    <string name="compose_button_send">Enviar</string>
    <string name="compose_message_success">Mensagem enviada!</string>

    <string name="fcm_channel_name">Novas mensagens</string>
    <string name="fcm_channel_description">Notificações de novas mensagens recebidas no MailLite</string>
    <string name="fcm_default_notification_title">Nova mensagem</string>

    <string name="inbox_logout_action">Sair</string>
</resources>